--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "jieba-analysis"]
 	path = jieba-analysis
-	url = https://github.com/sing1ee/jieba-analysis.git
+	url = https://gitee.com/brightxiaohan/jieba-analysis.git
